--- a/app/src/main/res/layout/activity_post_request.xml
+++ b/app/src/main/res/layout/activity_post_request.xml
@@ -44,4 +44,12 @@
         android:editable="true"
         android:enabled="true"
         android:hint="Enter time of class" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit request"
+        android:id="@+id/submit"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
