--- a/app/src/main/res/layout/activity_accept_request.xml
+++ b/app/src/main/res/layout/activity_accept_request.xml
@@ -9,4 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.purdue.agrawa49.proxyhunt.AcceptRequest">
 
+    <ExpandableListView
+        android:id="@+id/lvExp"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
 </RelativeLayout>
