--- a/app/src/main/res/layout/activity_accept_request.xml
+++ b/app/src/main/res/layout/activity_accept_request.xml
@@ -9,9 +9,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.purdue.agrawa49.proxyhunt.AcceptRequest">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/listViewAccept"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
