--- a/app/src/main/res/layout/activity_accept_request.xml
+++ b/app/src/main/res/layout/activity_accept_request.xml
@@ -18,8 +18,7 @@
     <ListView
         android:id="@+id/listViewAccept"
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
-        android:dividerHeight="20dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
     </android.support.v4.widget.SwipeRefreshLayout>
