--- a/app/src/main/res/layout/activity_post_request.xml
+++ b/app/src/main/res/layout/activity_post_request.xml
@@ -4,9 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/wordcloud"
     tools:context="edu.purdue.agrawa49.proxyhunt.PostRequest"
     android:focusable="false">
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,7 +18,8 @@
         android:layout_alignLeft="@+id/time"
         android:layout_alignStart="@+id/time"
         android:layout_alignRight="@+id/time"
-        android:layout_alignEnd="@+id/time" />
+        android:layout_alignEnd="@+id/time"
+        android:layout_marginTop="20dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -29,10 +30,10 @@
         android:editable="true"
         android:enabled="true"
         android:hint="Enter your location"
-        android:layout_marginTop="58dp"
         android:layout_below="@+id/classLocation"
         android:layout_alignLeft="@+id/classLocation"
-        android:layout_alignStart="@+id/classLocation" />
+        android:layout_alignStart="@+id/classLocation"
+        android:layout_marginTop="40dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -40,12 +41,13 @@
         android:inputType="time"
         android:ems="10"
         android:id="@+id/time"
-        android:layout_marginTop="35dp"
         android:editable="true"
         android:enabled="true"
         android:hint="Enter time of class"
         android:layout_below="@+id/course"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignLeft="@+id/cellNumber"
+        android:layout_alignStart="@+id/cellNumber"
+        android:layout_marginTop="40dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -66,7 +68,7 @@
         android:layout_below="@+id/time"
         android:layout_alignLeft="@+id/time"
         android:layout_alignStart="@+id/time"
-        android:layout_marginTop="63dp" />
+        android:layout_marginTop="40dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -74,7 +76,9 @@
         android:inputType="phone"
         android:ems="10"
         android:id="@+id/cellNumber"
-        android:layout_above="@+id/submit"
+        android:hint="Enter cell number"
+        android:layout_below="@+id/location"
         android:layout_centerHorizontal="true"
-        android:hint="Enter cell number" />
+        android:layout_marginTop="40dp" />
+
 </RelativeLayout>
