--- a/app/src/main/res/layout/activity_accept_request.xml
+++ b/app/src/main/res/layout/activity_accept_request.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/wc"
     tools:context="edu.purdue.agrawa49.proxyhunt.AcceptRequest">
 
     <android.support.v4.widget.SwipeRefreshLayout
